k8s/apps/network/ingress-nginx/minio-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: ingress-nginx
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "minio-console.emnt.dev"
    gethomepage.dev/name: "MinIO"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/icon: "minio"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: internal
  rules:
    - host: minio.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 9000
    - host: minio-console.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 9001
