k8s/apps/network/ingress-nginx/truenas-ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: ${NAS_URL}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: internal
  rules:
    - host: nas.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 443
